--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,7 +17,7 @@ pipeline{
         }
         stage('build'){
             steps{
-                sh 'mvn clean install'
+                sh 'mvn clean deploy'
             }
         }
 
