--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,4 +1,6 @@
-def registry = 'https://habbadabba.jfrog.io'
+def registry = 'https://legatocare.jfrog.io'
+def imageName = 'legatocare.jfrog.io/twitter-docker/ttrend'
+def version   = '2.0.2'
 pipeline{
     agent {
         node{
@@ -54,13 +56,13 @@ pipeline{
         steps {
             script {
                     echo '<--------------- Jar Publish Started --------------->'
-                     def server = Artifactory.newServer url:registry+"/artifactory" ,  credentialsId:"jfrog"
+                     def server = Artifactory.newServer url:registry+"/artifactory" ,  credentialsId:"jfrog101"
                      def properties = "buildid=${env.BUILD_ID},commitid=${GIT_COMMIT}";
                      def uploadSpec = """{
                           "files": [
                             {
                               "pattern": "jarstaging/(*)",
-                              "target": "twittertrend-libs-release-local/{1}",
+                              "target": "twitter-trend-libs-release-local/{1}",
                               "flat": "false",
                               "props" : "${properties}",
                               "exclusions": [ "*.sha1", "*.md5"]
@@ -74,6 +76,27 @@ pipeline{
             
             }
         }   
+    }
+stage(" Docker Build ") {
+      steps {
+        script {
+           echo '<--------------- Docker Build Started --------------->'
+           app = docker.build(imageName+":"+version)
+           echo '<--------------- Docker Build Ends --------------->'
+        }
+      }
+    }
+
+    stage (" Docker Publish "){
+        steps {
+            script {
+               echo '<--------------- Docker Publish Started --------------->'  
+                docker.withRegistry(registry, 'jfrog101'){
+                    app.push()
+                }    
+               echo '<--------------- Docker Publish Ended --------------->'  
+            }
+        }
     }
     }
 }
